--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 	<link href="https://fonts.googleapis.com/css?family=Rubik+Mono+One" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Ultra" rel="stylesheet">
 
+<link href="https://fonts.googleapis.com/css?family=Open+Sans:600i" rel="stylesheet">
+
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">	
 
 </head>
@@ -33,11 +35,12 @@
 
 		       <rect id="alpha" x="0" y="0" width="100%" height="59%"/>
 
-		       <text id='q-line-1' class="question right" x="0" y="110">This is a   </text>
-		  	   <text id='q-line-2' class="question left" x="0" y="230" >place holder</text>
-		       <text id='q-line-3' class="question right" x="0" y="350">question.  </text>
-		  	   <text id='q-line-4' class="question left" x="0" y="460" >What do you</text>
-		 	   <text id='q-line-5' class="question right" x="0" y="580">Think?     </text>
+		       <text id='q-line-0' class="question right" x="0" y="85">This is a placeh</text>
+		  	   <text id='q-line-1' class="question left" x="0" y="185" >place holder</text>
+		       <text id='q-line-2' class="question right" x="0" y="285">question.  </text>
+		  	   <text id='q-line-3' class="question left" x="0" y="385" >What do you</text>
+		 	   <text id='q-line-4' class="question right" x="0" y="485">Think?     </text>
+		 	   <text id='q-line-5' class="question right" x="0" y="585">Think?     </text>
 
 		     </mask>
 		  
@@ -64,7 +67,7 @@
 
 		<div id ='countdownContainer'>
 			
-			<span id='countdownTimer'>9</span>
+			<p id='countdownTimer'>9</p>
 
 		</div>
 
