working game play

--- a/index.html
+++ b/index.html
@@ -46,6 +46,12 @@
 		
 		</div>
 
+		<div id='message'>
+		
+			<span id='title'></span>
+			<span id='subtitle'></span>
+		
+		</div>
 
 		<footer>
 		
