--- a/index.html
+++ b/index.html
@@ -30,12 +30,12 @@
 
 			       <rect id="alpha" x="0" y="0" width="100%" height="59%"/>
 
-			       <text id='q-line-0' class="question right" x="0" y="85">Try and</text>
-			  	   <text id='q-line-1' class="question left" x="0" y="185">Answer all the</text>
-			       <text id='q-line-2' class="question right" x="0" y="285">Questions</text>
-			  	   <text id='q-line-3' class="question left" x="0" y="385">Before the</text>
-			 	   <text id='q-line-4' class="question right" x="0" y="485"> Color changes</text>
-			 	   <text id='q-line-5' class="question right" x="0" y="585">Completely!</text>
+			       <text id='q-line-0' class="question right" x="0" y="85"></text>
+			  	   <text id='q-line-1' class="question left" x="0" y="185"></text>
+			       <text id='q-line-2' class="question right" x="0" y="285"></text>
+			  	   <text id='q-line-3' class="question left" x="0" y="385"></text>
+			 	   <text id='q-line-4' class="question right" x="0" y="485"></text>
+			 	   <text id='q-line-5' class="question right" x="0" y="585"></text>
 
 			     </mask>
 			  
@@ -50,6 +50,7 @@
 		
 			<span id='title'></span>
 			<span id='subtitle'></span>
+			<span id='subsubtitle'></span>
 		
 		</div>
 
